--- a/usr/local/kickscar/www/htdocs/error/404.html
+++ b/usr/local/kickscar/www/htdocs/error/404.html
@@ -11,7 +11,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 <body>
 <h1>404 Not Found</h1>
 <p>
-    Sorry, the Page you are looking for cat currently Not Found.
+    Sorry, the Page you are looking for can currently Not be Found.
 </p>
 <p>
     <em>Faithfully yours, kickscar</em>
