--- a/usr/local/kickscar/www/htdocs/error/50x.html
+++ b/usr/local/kickscar/www/htdocs/error/50x.html
@@ -18,9 +18,8 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 <p>
     If you are the system administrator of this resource then you should check the error log for details.
 </p>
-
 <p>
-    <em>Faithfully yours, ^,.^</em>
+    <em>Faithfully yours, kickscar</em>
 </p>
 </body>
 </html>
