--- a/usr/local/kickscar/www/htdocs/index.html
+++ b/usr/local/kickscar/www/htdocs/index.html
@@ -11,7 +11,8 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 <body>
 <h1>Welcome to kickscar.me!</h1>
 <p>
-    <img src='/assets/images/kickscar-2021-11030.png' />
+    <img src='/assets/images/kickscar-2021-11-30.png' style='width: 100px; border:2px dashed white; padding: 2px'/>
+    <br/><br/>
     <strong>kickscar.me</strong>
 </p>
 
